--- a/ai/index.html
+++ b/ai/index.html
@@ -158,6 +158,7 @@ description: 简要描述
         <content>
 <h2>2025.W21</h2>
 <ul>
+<li data-tags="others"><a href="https://www.xiaobu.net/ai/firepaper.html">[others]考古出土钻木取火工具研究成果</a>（2025-05-25 11:41）</li>
 <li data-tags="bushcraft"><a href="https://www.xiaobu.net/ai/flintknapping.html">[bushcraft]《燧石打制》精华详览 - 罗伯特·特纳</a>（2025-05-23 14:49）</li>
 <li data-tags="bushcraft"><a href="https://www.xiaobu.net/ai/bowmaking.html">[bushcraft]《弓箭制作秘籍》精华速览</a>（2025-05-23 14:05）</li>
 <li data-tags="bushcraft"><a href="https://www.xiaobu.net/ai/mors.html">[bushcraft]《Bush Craft》野外生存秘籍大公开！🎉</a>（2025-05-23 13:45）</li>
