--- a/ai/index.html
+++ b/ai/index.html
@@ -185,6 +185,12 @@ description: 简要描述
 <li data-tags="se"><a href="https://www.xiaobu.com/ai/roamdown.html">[se]Roam的陨落 - 核心观点</a>（2025-05-20 12:18）</li>
 <li data-tags="ai se"><a href="https://www.xiaobu.com/ai/altas.html">[ai][se]Atlassian Q3FY25 业绩及 AI 战略更新</a>（2025-05-19 19:03）</li>
 </ul>
+<h2>2025.W03</h2>
+<ul>
+<li data-tags="mind"><a href="https://www.xiaobu.com/ai/dawnforkids.html">[mind]给小学生的《人类新史》</a>（2025-01-15 11:00）</li>
+<li data-tags="bushcraft"><a href="https://www.xiaobu.com/ai/dawnforbushcrafter.html">[bushcraft]《人类新史》Bushcraft 玩家精要</a>（2025-01-15 10:30）</li>
+<li data-tags="mind"><a href="https://www.xiaobu.com/ai/dawnofeverything.html">[mind]《人类新史》章节要点摘要</a>（2025-01-15 09:30）</li>
+</ul>
 </content>
     </main>
     <footer>
