--- a/ai/index.html
+++ b/ai/index.html
@@ -160,6 +160,7 @@ description: 简要描述
 <h2>2025.W22</h2>
 <ul>
 <li data-tags="ai"><a href="https://www.xiaobu.net/ai/bondcapai.html">[ai]人工智能趋势报告 - 摘要</a>（2025-06-01 15:30）</li>
+<li data-tags="ai"><a href="https://www.xiaobu.net/ai/nvidiahuang.html">[ai]视频摘要：Nvidia CEO 黄仁勋访谈</a>（2025-06-01 14:30）</li>
 <li data-tags="others"><a href="https://www.xiaobu.net/ai/proip.html">[others]专家IP短视频问题解决</a>（2025-05-31 20:55）</li>
 <li data-tags="others"><a href="https://www.xiaobu.net/ai/naturefix.html">[others]《自然疗愈》核心摘要</a>（2025-05-31 20:55）</li>
 <li data-tags="others"><a href="https://www.xiaobu.net/ai/hearne.html">[others]萨缪尔·赫恩的北方之旅摘要</a>（2025-05-31 20:55）</li>
